Renamed Notification to Endpoint & Fixed duplication error.
